--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,7 +1,10 @@
-<h1>Restaurants</h1>
-
-<%@restaurants.each do |i| %>
-<p><%= link_to i.name, restaurant_path(i) %></p>
-<%end %>
-
-<p><%= link_to "New restaurant", new_restaurant_path(@restaurant) %></p>
+<div class="page">
+  <h1>Restaurants</h1>
+  <div class="grid">
+    <%@restaurants.each do |i| %>
+    <div class = grid_item>
+      <h5><%= link_to i.name, restaurant_path(i) %></h5></div>
+    <%end %>
+  </div>
+  <p><%= link_to "New restaurant", new_restaurant_path(@restaurant) %></p>
+</div>
